5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1590_2895.log
== SUBMITION (2019-03-20 15:28:50) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
var2 float(input("valor unitario"))
frete = 20
total = var * var2 

print(total + frete)




-- EXECUTION TIME:
0.190845
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    var2 float(input())
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:32:33) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))

total = (var * var2) + frete 

print(total)




-- EXECUTION TIME:
0.127642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = (var * var2) + frete 
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:32:47) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))

total = (var * var2) 

print(total + frete)




-- EXECUTION TIME:
0.189456
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 7, in <module>
    print(total + frete)
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:33:04) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))

total = (var * var2) 

print(float(total + frete))




-- EXECUTION TIME:
0.145252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 7, in <module>
    print(float(total + frete))
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:33:33) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))

total = (var * var2) + frete

print(float(total)




-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:35:27) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))

total = (var * var2) + frete

print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var * var2) + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:35:57) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))

total = (var * var2) + frete

print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var * var2) + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:36:05) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados?"))
var2 = float(input("valor unitario"))
var3 = float(input("frete"))

total = (var * var2) + frete

print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var * var2) + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:36:25) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados?"))
var2 = float(input("valor unitario?"))
var3 = float(input("frete"))

total = (var * var2) + frete

print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (var * var2) + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:38:37) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados?"))
var2 = float(input("valor unitario? "))
var3 = float(input("frete:"))

total = (var * var2) + var3

print(total)




-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:38:40) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados?"))
var2 = float(input("valor unitario? "))
var3 = float(input("frete:"))

total = (var * var2) + var3

print(total)




-- EXECUTION TIME:
0.123731
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
